# era-one

./: .gitignore  Cargo.toml  PRD-vm.md  README.md  contacts.html  edition.html  editions-comms.yaml  editions-control.yaml  editions-office.yaml  editions-shared.yaml  go.work  go.work.sum  legacy-portal.html  pricing-data.js  products.yaml  register.html  vision.html
.cursor/rules/: clickhouse-conventions.mdc  commit-and-pr.mdc  contracts-first.mdc  donor-strategy.mdc  go-conventions.mdc  module-glossary.mdc  rust-agent-conventions.mdc  security-and-air-gap.mdc  task-acceptance.mdc  testing-and-golden.mdc  ui-design.mdc
.github/workflows/: ci.yml  site-deploy.yml
assets/: app.js  calc-i18n.js  calc-license-model.js  calc-modal.js  calc-mount.js  datasheet-view.js  downloads-view.js  site.css  site.js
compare/ar/: ERA-vs-BigFix.html
compare/en/: ERA-vs-BigFix.html  ERA-vs-Exchange.html  ERA-vs-Microsoft365-Comms.html  ERA-vs-Microsoft365-Office.html  ERA-vs-PositiveTechnologies.html  ERA-vs-TrendMicro.html
compare/ru/: ERA-vs-BigFix.html  ERA-vs-CommuniGate.html  ERA-vs-GoogleWorkspace.html  ERA-vs-Microsoft365-Office.html
compare/tr/: ERA-vs-BigFix.html  ERA-vs-CheckPoint.html  ERA-vs-PositiveTechnologies.html
crates/era-agent/: Cargo.toml
crates/era-agent-core/: Cargo.toml
crates/era-agent-core/benches/: agent_budget.rs
crates/era-agent-core/src/: budget_guard.rs  buffer.rs  builder.rs  config.rs  lib.rs  license_gate.rs  orchestrator.rs  ota.rs  register.rs  sanitize.rs  scheduler.rs  sender.rs
crates/era-agent-core/src/capture/: domain_stub.rs  evtx_parser.rs  linux_audit.rs  macos_unified.rs  mod.rs  production.rs  stub.rs  sysinfo_cap.rs  windows_events.rs
crates/era-agent-core/src/enforce/: check.rs  engine.rs  envelope.rs  loader.rs  mod.rs  policy.rs
crates/era-agent-core/src/enforce/testdata/: allow_deny.golden.json  enforcement_policy.json
crates/era-agent-core/src/plugin/: manifest.rs  mod.rs  ndjson.rs  runner.rs
crates/era-agent-core/src/tamper/: mod.rs  watchdog.rs
crates/era-agent-core/testdata/: inventory.plugin.json  inventory_envelope_wire.golden.hex  inventory_ndjson_line.json  sysmon_evtx_fragment.xml
crates/era-agent-core/tests/: golden_enforcement.rs  golden_pii.rs  golden_plugin_ndjson.rs  plugin_e2e.rs
crates/era-agent/benches/: agent_budget.rs
crates/era-agent/src/: lib.rs  main.rs
crates/era-agent/testdata/: process_sanitized.golden.json
crates/era-agent/tests/: golden_pii.rs
crates/era-collectors/: Cargo.toml
crates/era-collectors/src/: byo_edr.rs  lib.rs  modbus.rs
crates/era-collectors/testdata/: modbus_frame.golden.txt
crates/era-collectors/tests/: golden_byo_edr.rs
crates/era-collectors/tests/testdata/: byo_edr_feed.json  byo_edr_syslog.cef
crates/era-license/: Cargo.toml
crates/era-license/src/: lib.rs
crates/era-plugin-appcontrol/: Cargo.toml
crates/era-plugin-appcontrol/src/: hooks.rs  main.rs
crates/era-plugin-appcontrol/testdata/: status.golden.json
crates/era-plugin-bitlocker/: Cargo.toml
crates/era-plugin-bitlocker/src/: main.rs
crates/era-plugin-deploy/: Cargo.toml
crates/era-plugin-deploy/src/: install.rs  main.rs
crates/era-plugin-devicecontrol/: Cargo.toml
crates/era-plugin-devicecontrol/src/: hooks.rs  main.rs
crates/era-plugin-inventory/: Cargo.toml
crates/era-plugin-inventory/src/: hw.rs  main.rs  software.rs
crates/era-plugin-inventory/testdata/: dpkg_status_sample
crates/era-plugin-sdk/: Cargo.toml
crates/era-plugin-sdk/src/: lib.rs
crates/era-plugin-vuln/: Cargo.toml
crates/era-plugin-vuln/src/: main.rs
crates/era-proto/: Cargo.toml  build.rs
crates/era-proto/src/: lib.rs
data/mitre-eval/: scenarios.json
data/national-iocs/: patterns.json
data/tip/: bundle.json
datasheets/ar/: 08-ERA-BYO-EDR.html  13-ERA-Observe.html  14-ERA-Sovereign-Hybrid.html  ERA-Communications-DataSheet.html  ERA-One-DataSheet.html  comms-03-ERA-Conference.html  comms-05-ERA-Comms-AI.html  comms-06-ERA-Mail-Connect.html  office-00-ERA-Drive.html  office-01-ERA-Documents.html
datasheets/assets/: datasheet-common.js
datasheets/en/: 01-ERA-Core.html  02-ERA-Control-AI.html  (+11 more)
deploy/: docker-compose.dev.yml  docker-compose.prod-ha.yml  docker-compose.prod.yml
docs/: ADR-Implementation-Matrix.md  Agent-Core-Spec.md  CMDB-ITAM-Spec.md  Comms-Pilot-Gap-List.md  Comms-Sprint-Index.md  Development-Plan.md  ERA-One-Rename-Notes.md  ERA-Platform-Vision.md  Enforcement-Spec.md  Field-Server-Setup.md  Field-Server-Sizing.md  GA-2-Signoff.md  GA-3-Signoff.md  GA-Master-Execution-Plan.md  Hardening-Scale-Spec.md  Hybrid-0-Spec.md  Implementation-Roadmap.md  Install-Guide-GA.md  MVP-Sprint-1-Spec.md  MVP-Sprint-2-Spec.md  MVP-Sprint-3-Spec.md  MVP-Sprint-4-Spec.md  Market-Positioning-AZ.md  Observe-Spec.md  PAM-Spec.md  Pilot-Readiness-Checklist.md  Pre-Field-Code-Backlog.md  Production-GA-Spec.md  Production-Readiness-Assessment.md  SSO-Setup-GA.md  Service-Provision-Spec.md  Workbench-Exposure-Spec.md
reports/: AI-Donors-Matrix-Deep-Analysis.md  AI-Donors-Matrix-Deep-Analysis.print.html  ERA-XDR-Architecture-Blueprint.md  export_md_to_pdf.py  field-server-inventory.md
scripts/: backup-prod.ps1  backup-restore-smoke.ps1  build-site.ps1  build-site.sh  build_portal.py  check-field-server.ps1  ci-gates-stage10.ps1  ci-gates-stage10.sh  crop_logo_banner.py  gen-dev-tls.ps1  gen-proto.ps1  generate_distributor_docs.py  helm-template-check.ps1  helm-upgrade.ps1  html_to_pdf.py  md_to_pdf.py  outline_logo_text.py  pricing_to_pdf.py  restore-prod.ps1  run-chaos-smoke.ps1  run-distributor-demo.cmd  run-distributor-demo.ps1  run-e2e.ps1  run-ga-e2e-prod.ps1  run-ga-full.ps1  run-ga1-smoke.ps1  run-loadgen-prod.ps1  run-loadtest.ps1  run-phase2-e2e.ps1  run-phase3-e2e.ps1  run-phase4-e2e.ps1  run-pii-gate.ps1  run-pilot-local.cmd  run-pilot-local.ps1  sparse-checkout-site.sh  vectorize_logo.py
site/: README.md  about.html  communications.html  compare.html  contacts.html  control.html  downloads.html  index.html  legacy-portal.html  login.html  office.html  pricing-data.js
(+1288 files in other folders)
