[package]
name = "era-agent-core"
version = "0.1.0"
edition = "2021"
description = "ERA One — agent orchestrator (scheduler, plugins, OTA, XDR capture)"
license = "Proprietary"

[dependencies]
era-proto = { path = "../era-proto" }
era-license = { path = "../era-license" }
era-plugin-sdk = { path = "../era-plugin-sdk" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "process", "io-util"] }
tonic = { version = "0.12", features = ["transport", "tls-native-roots"] }
prost = "0.13"
prost-types = "0.13"
ulid = "1"
anyhow = "1"
tracing = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.32"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
base64 = "0.22"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
hex = "0.4"
prost = "0.13"

[[bench]]
name = "agent_budget"
harness = false

[lib]
name = "era_agent_core"
path = "src/lib.rs"
