[package]
name = "era-collectors"
version = "0.1.0"
edition = "2021"
description = "ERA XDR — OT/ICS collectors + BYO-EDR Hub (ADR-0017)"
license = "Proprietary"

[lib]
path = "src/lib.rs"

[dependencies]
era-proto = { path = "../era-proto" }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ulid = "1"

[dev-dependencies]
prost = "0.13"
