[package]
name = "era-license"
version = "0.1.0"
edition = "2021"
description = "ERA XDR — верификатор лицензий на стороне агента (defense-in-depth, ADR-0010)"
license = "Proprietary"

# Зеркалирует формат токена Go-реализации (services/license): один и тот же
# ERA1.<base64url(claims)>.<base64url(sig)> читается и Go, и Rust.
[dependencies]
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
