[package]
name = "era-plugin-deploy"
version = "0.1.0"
edition = "2021"
description = "ERA Manage — software deploy/patch on-demand (signed packages)"
license = "Proprietary"

[dependencies]
era-plugin-sdk = { path = "../era-plugin-sdk" }
era-agent-core = { path = "../era-agent-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"

[[bin]]
name = "era-plugin-deploy"
path = "src/main.rs"
