[package]
name = "era-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "ERA One — SDK для subprocess-плагинов агента (NDJSON ABI)"
license = "Proprietary"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[lib]
name = "era_plugin_sdk"
path = "src/lib.rs"
