[package]
name = "era-proto"
version = "0.1.0"
edition = "2021"
description = "ERA One — сгенерированные типы protobuf/gRPC из proto/era/v1"
license = "Proprietary"
publish = false

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
